# QuantumFS

./: .gitignore  .provision_ubuntu.sh  Cargo.toml  LICENSE  README.md  Vagrantfile
client/: Cargo.toml  cli.yaml  settings.toml.example
client/src/: args.rs  cache.rs  fs.rs  main.rs  settings.rs
client/src/commands/: commit.rs  mod.rs  mount.rs  push.rs  transaction.rs
ethereum/: .gitignore  package.json  truffle-config.js
ethereum/contracts/: QuantumFS.sol
ethereum/migrations/: 2_deploy_contract.js
ethereum/test/: QuantumFS.js
quantumfs/: Cargo.toml
quantumfs/src/: lib.rs
quantumfs/src/errors/: mod.rs
quantumfs/src/models/: catalog.rs  directoryentry.rs  manifest.rs  mod.rs  repository.rs  revision.rs
quantumfs/src/operations/: database.rs  ethereum.rs  ipfs.rs  mod.rs  path.rs
quantumfs/src/types/: ipfs.rs
src/: lib.rs
src/errors/: errors.rs
src/models/: catalog.rs  directoryentry.rs  manifest.rs  mod.rs  repository.rs  revision.rs
src/operations/: ethereum.rs  ipfs.rs  mod.rs  path.rs
src/types/: ipfs.rs
