[package]
name = "qfs"
description = "QuantumFS client"
version = "0.1.0"
authors = ["José Molina Colmenero <jmolinacolmenero"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quantumfs = { path = "../quantumfs" }
clap = {version = "2.33.0", features = ["yaml"]}
fuse_mt = "0.5.0"
config = "0.9.3"
lazy_static = "1.4.0"
time = "0.1.42"
web3 = "0.8.0"
yaml-rust = "0.3.5"
libc = "0.2.62"
users = "0.9.1"
