[package]
name = "quantumfs"
description = "Highly-distributed censorship-resistant ethereum-based file system"
version = "0.1.0"
authors = ["José Molina Colmenero <jmolinacolmenero@gmail.com>"]
edition = "2018"

[dependencies]
ipfsapi = "0.3.0"
web3 = "0.8.0"
regex = "1.2.1"
failure = "0.1.5"
lazy_static = "1.4.0"
serde_json = "1.0.40"
tempfile = "3.1.0"
multihash = "0.8.0"
base58 = "0.1.0"
path-absolutize = "1.1.6"
filepath = "0.1.1"

[dependencies.rusqlite]
version = "0.20.0"
features = ["bundled"]
